First initial commit.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="author" content="Agorama">
+    <meta name="author" content="Alejandro Ball">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Moses Aloetta Info Page</title>
+    <title>Choo-Bootstrap-Basic</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/additions.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
 
